--- a/v1.x.x/views/home.ejs
+++ b/v1.x.x/views/home.ejs
@@ -40,19 +40,19 @@
 				</button>
 				<ul class="dropdown-menu nightBG">
 					<li id="tmDotLink" class="my-0 py-0">
-						<a class="neonBtn mx-4" href="https://www.trevmorin.com/"><span class="tmLgText">T</span><span class="tmSmText">rev</span><span class="tmLgText">M</span><span class="tmSmText">orin</span><span class="tmComText">.com</span></a>
+						<a class="neonBtn mx-4" href="http://www.trevmorin.com/"><span class="tmLgText">T</span><span class="tmSmText">rev</span><span class="tmLgText">M</span><span class="tmSmText">orin</span><span class="tmComText">.COM</span></a>
 					</li>
 					<li class="mt-0 mb-1 pt-0 pb-1">
-						<a class="neonBtn mx-4" href="https://www.superklok.com/"><span id="slText">Superklok.com</span></a>
+						<a class="neonBtn mx-4" href="http://www.superklok.com/"><span id="slText">Superklok.com</span></a>
 					</li>
 					<li class="mt-0 mb-1 pt-0 pb-1">
-						<a class="neonBtn mx-4" href="https://www.currentcourant.com/"><span id="ccText">CurrentCourant.com</span></a>
+						<a class="neonBtn mx-4" href="http://www.currentcourant.com/"><span id="ccText">CurrentCourant.com</span></a>
 					</li>
 					<li class="mb-2 pb-1">
-						<a class="neonBtn mx-4" href="https://www.jetwheelreel.com/"><span id="jwrText">JetWheelReel.com</span></a>
+						<a class="neonBtn mx-4" href="http://www.jetwheelreel.com/"><span id="jwrText">JetWheelReel.com</span></a>
 					</li>
 					<li class="mt-0 mb-3">
-						<a class="neonBtn mx-4" href="https://www.sliderpiler.com/"><span id="spText">SliderPiler.com</span></a>
+						<a class="neonBtn mx-4" href="http://www.sliderpiler.com/"><span id="spText">SliderPiler.com</span></a>
 					</li>
 				</ul>
 			</div>
@@ -62,7 +62,7 @@
 				</button>
 				<ul class="dropdown-menu nightBG">
 					<li class="mx-4 my-3 px-3">
-						<a class="smText neonBtn" href="https://www.swingcars.ca/">Fran&#231;ais</a>
+						<a class="smText neonBtn" href="http://www.swingcars.ca/">Fran&#231;ais</a>
 					</li>
 				</ul>
 			</div>
