--- a/v0.x.x/public/styles/home.css
+++ b/v0.x.x/public/styles/home.css
@@ -1,7 +1,7 @@
 body {
 	background-attachment: fixed;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-	url('https://res.cloudinary.com/superkloklabs/image/upload/v1609157894/SwingcarsDotNet/swingcarsBG_if57r6.jpg');
+	url('../assets/img/swingcarsBG.jpg');
 	background-size: cover;
 	background-position: center;
 	box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
