--- a/v1.x.x/views/partials/footer.ejs
+++ b/v1.x.x/views/partials/footer.ejs
@@ -1,11 +1,11 @@
-<footer class="footer nightBG py-3 mt-auto">
+<footer class="footer nightBG py-0 mt-auto">
 	<div class="container d-none d-lg-block">
 		<div class="d-flex align-items-center">
 			<a class="neonBtn" href="http://superkloklabs.com/">
 				<span class="me-3">&copy; <span class="xsText contentFont">2021 Superklok Labs</span></span>
 			</a>
 			<div class="btn-group dropup">
-				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,-1">
 					<span id="tmLogo">TM</span>
 				</button>
 				<ul class="dropdown-menu nightBG">
@@ -21,50 +21,50 @@
 					<li class="mb-2 pb-1">
 						<a class="neonBtn mx-4" href="http://www.jetwheelreel.com/"><span id="jwrText">JetWheelReel.com</span></a>
 					</li>
-					<li class="mt-0 mb-3">
+					<li class="mt-0 mb-2">
 						<a class="neonBtn mx-4" href="http://www.sliderpiler.com/"><span id="spText">SliderPiler.com</span></a>
 					</li>
 				</ul>
 			</div>
 			<div class="btn-group dropup ms-2">
-				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,7">
 					<span class="smText contentFont">English</span>
 				</button>
 				<ul class="dropdown-menu nightBG">
-					<li class="mx-4 my-3 px-3">
+					<li class="mx-4 my-1 px-3">
 						<a class="smText neonBtn" href="http://www.swingcars.ca/">Fran&#231;ais</a>
 					</li>
 				</ul>
 			</div>
 			<div class="ms-auto">
 				<a class="socialBtn" href="https://github.com/Superklok/SwingcarsDotNet/tree/main/v1.x.x">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258013/SocialMediaIcons/iconGH_zwphaf.png" alt="">
+					<img src="../assets/img/icons/iconGH.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://www.youtube.com/channel/UCNnuDVs9xXqT5PrbL-uP7Vw/featured">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258263/SocialMediaIcons/iconYT_qjym3l.png" alt="">
+					<img src="../assets/img/icons/iconYT.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://www.tiktok.com/@superklok?">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258208/SocialMediaIcons/iconTT_lwrdmk.png" alt="">
+					<img src="../assets/img/icons/iconTT.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://www.instagram.com/superkloklabs/">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258099/SocialMediaIcons/iconIG_q6ovlw.png" alt="">
+					<img src="../assets/img/icons/iconIG.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://soundcloud.com/user-166803901">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258155/SocialMediaIcons/iconSC_i0oi4x.png" alt="">
+					<img src="../assets/img/icons/iconSC.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://audiomack.com/superklok/uploads">
-					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257825/SocialMediaIcons/iconAM_wvzqeg.png" alt="">
+					<img class="rounded" src="../assets/img/icons/iconAM.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://superklok.bandcamp.com/">
-					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257800/SocialMediaIcons/iconBC_umi8zt.png" alt="">
+					<img class="rounded" src="../assets/img/icons/iconBC.png" alt="">
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="container d-none d-sm-block d-lg-none">
-		<div class="d-flex align-items-center pb-1">
+		<div class="d-flex align-items-center py-0">
 			<div class="btn-group dropup">
-				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,-1">
 					<span id="tmLogo">TM</span>
 				</button>
 				<ul class="dropdown-menu nightBG">
@@ -80,57 +80,57 @@
 					<li class="mb-2 pb-1">
 						<a class="neonBtn mx-4" href="http://www.jetwheelreel.com/"><span id="jwrText">JetWheelReel.com</span></a>
 					</li>
-					<li class="mt-0 mb-3">
+					<li class="mt-0 mb-2">
 						<a class="neonBtn mx-4" href="http://www.sliderpiler.com/"><span id="spText">SliderPiler.com</span></a>
 					</li>
 				</ul>
 			</div>
 			<div class="btn-group dropup ms-2">
-				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,7">
 					<span class="smText contentFont">English</span>
 				</button>
 				<ul class="dropdown-menu nightBG">
-					<li class="mx-4 my-3 px-3">
+					<li class="mx-4 my-1 px-3">
 						<a class="smText neonBtn" href="http://www.swingcars.ca/">Fran&#231;ais</a>
 					</li>
 				</ul>
 			</div>
-			<div class="ms-auto mb-1">
+			<div class="ms-auto mb-0">
 				<a class="socialBtn" href="https://github.com/Superklok/SwingcarsDotNet/tree/main/v1.x.x">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258013/SocialMediaIcons/iconGH_zwphaf.png" alt="">
+					<img src="../assets/img/icons/iconGH.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://www.youtube.com/channel/UCNnuDVs9xXqT5PrbL-uP7Vw/featured">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258263/SocialMediaIcons/iconYT_qjym3l.png" alt="">
+					<img src="../assets/img/icons/iconYT.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://www.tiktok.com/@superklok?">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258208/SocialMediaIcons/iconTT_lwrdmk.png" alt="">
+					<img src="../assets/img/icons/iconTT.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://www.instagram.com/superkloklabs/">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258099/SocialMediaIcons/iconIG_q6ovlw.png" alt="">
+					<img src="../assets/img/icons/iconIG.png" alt="">
 				</a>
 			</div>
 		</div>
-		<div class="d-flex align-items-center">
+		<div class="d-flex align-items-center pb-2">
 			<a class="neonBtn" href="http://superkloklabs.com/">
 				<span class="me-3">&copy; <span class="xsText contentFont">2021 Superklok Labs</span></span>
 			</a>
 			<div class="ms-auto pb-1">
 				<a class="socialBtn" href="https://soundcloud.com/user-166803901">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258155/SocialMediaIcons/iconSC_i0oi4x.png" alt="">
+					<img src="../assets/img/icons/iconSC.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://audiomack.com/superklok/uploads">
-					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257825/SocialMediaIcons/iconAM_wvzqeg.png" alt="">
+					<img class="rounded" src="../assets/img/icons/iconAM.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://superklok.bandcamp.com/">
-					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257800/SocialMediaIcons/iconBC_umi8zt.png" alt="">
+					<img class="rounded" src="../assets/img/icons/iconBC.png" alt="">
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="d-block d-sm-none">
-		<div class="d-flex align-items-center justify-content-center pb-2">
+		<div class="d-flex align-items-center justify-content-center py-0">
 			<div class="btn-group dropup">
-				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,-1">
 					<span id="tmLogo">TM</span>
 				</button>
 				<ul class="dropdown-menu nightBG">
@@ -146,50 +146,50 @@
 					<li class="mb-2 pb-1">
 						<a class="neonBtn mx-4" href="http://www.jetwheelreel.com/"><span id="jwrText">JetWheelReel.com</span></a>
 					</li>
-					<li class="mt-0 mb-3">
+					<li class="mt-0 mb-2">
 						<a class="neonBtn mx-4" href="http://www.sliderpiler.com/"><span id="spText">SliderPiler.com</span></a>
 					</li>
 				</ul>
 			</div>
 			<div class="btn-group dropup ms-2">
-				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,7">
 					<span class="smText contentFont">English</span>
 				</button>
 				<ul class="dropdown-menu nightBG">
-					<li class="mx-4 my-3 px-3">
+					<li class="mx-4 my-1 px-3">
 						<a class="smText neonBtn" href="http://www.swingcars.ca/">Fran&#231;ais</a>
 					</li>
 				</ul>
 			</div>
 		</div>
-		<div class="d-flex align-items-center justify-content-center pt-1 pb-2">
+		<div class="d-flex align-items-center justify-content-center py-0">
 			<a class="neonBtn" href="http://superkloklabs.com/">
 				<span class="me-3">&copy; <span class="xsText contentFont">2021 Superklok Labs</span></span>
 			</a>
 		</div>
 		<div class="d-flex align-items-center justify-content-center pt-2">
-			<a class="socialBtn" href="https://github.com/Superklok/SwingcarsDotNet/tree/main/v1.x.x">
-				<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258013/SocialMediaIcons/iconGH_zwphaf.png" alt="">
+			<a class="socialBtn pb-1" href="https://github.com/Superklok/SwingcarsDotNet/tree/main/v1.x.x">
+				<img src="../assets/img/icons/iconGH.png" alt="">
 			</a>
-			<a class="socialBtn" href="https://www.youtube.com/channel/UCNnuDVs9xXqT5PrbL-uP7Vw/featured">
-				<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258263/SocialMediaIcons/iconYT_qjym3l.png" alt="">
+			<a class="socialBtn pb-1" href="https://www.youtube.com/channel/UCNnuDVs9xXqT5PrbL-uP7Vw/featured">
+				<img src="../assets/img/icons/iconYT.png" alt="">
 			</a>
-			<a class="socialBtn" href="https://www.tiktok.com/@superklok?">
-				<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258208/SocialMediaIcons/iconTT_lwrdmk.png" alt="">
+			<a class="socialBtn pb-1" href="https://www.tiktok.com/@superklok?">
+				<img src="../assets/img/icons/iconTT.png" alt="">
 			</a>
-			<a class="socialBtn" href="https://www.instagram.com/superkloklabs/">
-				<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258099/SocialMediaIcons/iconIG_q6ovlw.png" alt="">
+			<a class="socialBtn pb-1" href="https://www.instagram.com/superkloklabs/">
+				<img src="../assets/img/icons/iconIG.png" alt="">
 			</a>
 		</div>
-		<div class="d-flex align-items-center justify-content-center pt-2">
+		<div class="d-flex align-items-center justify-content-center pb-1">
 			<a class="socialBtn" href="https://soundcloud.com/user-166803901">
-				<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258155/SocialMediaIcons/iconSC_i0oi4x.png" alt="">
+				<img src="../assets/img/icons/iconSC.png" alt="">
 			</a>
 			<a class="socialBtn" href="https://audiomack.com/superklok/uploads">
-				<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257825/SocialMediaIcons/iconAM_wvzqeg.png" alt="">
+				<img class="rounded" src="../assets/img/icons/iconAM.png" alt="">
 			</a>
 			<a class="socialBtn" href="https://superklok.bandcamp.com/">
-				<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257800/SocialMediaIcons/iconBC_umi8zt.png" alt="">
+				<img class="rounded" src="../assets/img/icons/iconBC.png" alt="">
 			</a>
 		</div>
 	</div>
